--- a/trunk/kaptan/po/de.po
+++ b/trunk/kaptan/po/de.po
@@ -7,26 +7,19 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-11 14:32+0200\n"
-"PO-Revision-Date: 2006-12-11 00:07+0200\n"
+"PO-Revision-Date: 2006-12-11 20:23+0200\n"
 "Last-Translator: Mustafa M. Ölcerman <oelcerman@fussballkreis.org>\n"
-"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-"
-"translation-de>\n"
+"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 99
-#: rc.cpp:66
-#, no-c-format
 msgid " hours"
-msgstr ""
+msgstr "Zeit"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 167
-#: rc.cpp:52
-#, no-c-format
 msgid "&Single-click to open files and folders"
-msgstr ""
+msgstr "&Mit einem Klick Dateien und Ordner öffnen"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 134
 #: rc.cpp:33
@@ -34,12 +27,8 @@ msgstr ""
 msgid "&Test Wallpaper"
 msgstr "&Hintergrundbild testen"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 51
-#: rc.cpp:7
-#, no-c-format
-msgid ""
-"<center>You have finished!  Now you can start using Pardus Linux</center>"
-msgstr ""
+msgid "<center>You have finished!  Now you can start using Pardus Linux</center>"
+msgstr "<center>Sie sind fertig!  Sie können nun mit der Anwendung von Pardus Linux anfangen</center>"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 58
 #: rc.cpp:42
@@ -47,17 +36,11 @@ msgstr ""
 msgid "Button Order"
 msgstr "Tastenordnung"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 82
-#: rc.cpp:62
-#, no-c-format
 msgid "Check updates automatically for every"
-msgstr ""
+msgstr "Updates automatisch für alle überprüfen"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 156
-#: rc.cpp:49
-#, no-c-format
 msgid "Click behaviour"
-msgstr ""
+msgstr "Klick-Verhaltensweise"
 
 #: ../src/kaptan.cpp:65
 msgid "Congratulations"
@@ -69,45 +52,24 @@ msgstr "Gratulation"
 msgid "Don't change desktop background!"
 msgstr "Hintergrundbild nicht ändern!"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 178
-#: rc.cpp:55
-#, no-c-format
 msgid "Dou&ble-click to open files and folders (select icons on first click)"
-msgstr ""
+msgstr "Dop&pelklicken, um Dateien und Ordner zu öffnen ( beim ersten Klick Icons auswählen)"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 27
-#: rc.cpp:78
-#, fuzzy, no-c-format
 msgid ""
 "Here, you can select a style for your desktop. Pardus provides some eye "
 "candy styles for you."
-msgstr ""
-"Hier können Sie ein Hintergrundbild für Ihre Arbeitsfläche auswählen. Sie "
-"können eins von Pardus angebotenen Hintergrundbildernauswählen, wenn Sie "
-"möchten ;),"
+msgstr "Hier können Sie ein Stil für Ihre Arbeitsfläche auswählen. Pardus bietet Ihnen einige blickfangende Stile an."
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 27
-#: rc.cpp:23
-#, fuzzy, no-c-format
 msgid ""
 "Here, you can select a wallpaper for your desktop background. Pardus "
 "provides eye candy wallpapers, you can select one of them, as you wish."
-msgstr ""
-"Hier können Sie ein Hintergrundbild für Ihre Arbeitsfläche auswählen. Sie "
-"können eins von Pardus angebotenen Hintergrundbildernauswählen, wenn Sie "
-"möchten ;),"
+msgstr "Hier können Sie ein Hintergrundbild für Ihre Arbeitsfläche auswählen. Pardus bietet Ihnen einige blickfangende Hintergrundbilder an, die Sie auswählen und verwenden können."
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
-#: rc.cpp:72
-#, no-c-format
 msgid ""
 "Here, you can select default behaviour of package-manager, software manager "
 "for Pardus."
-msgstr ""
+msgstr "Hier können Sie die Standardverhaltensweise vom Paket-Manager, ein Software-Manager für Pardus, auswählen."
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 27
-#: rc.cpp:39
-#, fuzzy, no-c-format
 msgid ""
 "If you are left-handed, you may prefer to swap the functions of the left and "
 "right buttons on your pointing device by choosing the 'Left handed' option "
@@ -122,30 +84,20 @@ msgstr ""
 msgid "Kaptan Desktop"
 msgstr "Kaptan Desktop"
 
-#: ../src/mouse.cpp:32
-#, fuzzy
 msgid "Left handed"
-msgstr "Links&händig"
+msgstr "Linkshändig"
 
-#: ../src/kaptan.cpp:45
 msgid "Mouse Setup"
-msgstr "Maus Einrichtung"
+msgstr "Mauskonfiguration"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 16
-#: rc.cpp:36
-#, fuzzy, no-c-format
 msgid "MouseSetupDlg"
-msgstr "Maus Einrichtung"
+msgstr "MauskonfigurationDlg"
 
-#: ../src/kaptan.cpp:57
 msgid "Network Setup"
-msgstr ""
+msgstr "Netzwerkkonfiguration"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 35
-#: rc.cpp:59 ../src/kaptan.cpp:61
-#, no-c-format
 msgid "Package Manager"
-msgstr ""
+msgstr "Paket-Manager"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
 #: rc.cpp:16
@@ -167,42 +119,25 @@ msgstr ""
 #: rc.cpp:45
 #, no-c-format
 msgid "Reverse scroll"
-msgstr ""
+msgstr "Rückwärts scrollen"
 
-#: ../src/mouse.cpp:31
-#, fuzzy
 msgid "Right handed"
-msgstr "Rechts&händig"
+msgstr "Rechtshändig"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 121
-#: rc.cpp:69
-#, no-c-format
 msgid "Show in system tray"
-msgstr ""
+msgstr "Im Systemabschnitt in der Taskleiste anzeigen"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 43
-#: rc.cpp:4
-#, no-c-format
 msgid "Start Tasma"
-msgstr ""
+msgstr "Tasma starten"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 16
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 38
-#: rc.cpp:75 rc.cpp:81
-#, no-c-format
 msgid "Style"
-msgstr ""
+msgstr "Stil"
 
-#: ../src/kaptan.cpp:49
-#, fuzzy
 msgid "Style Setup"
-msgstr "Maus Einrichtung"
+msgstr "Stilkonfiguration"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 62
-#: rc.cpp:87
-#, no-c-format
 msgid "Test Style"
-msgstr ""
+msgstr "Stil testen"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 27
 #: rc.cpp:13
@@ -218,59 +153,15 @@ msgstr ""
 "leisten. Mit dieser Anwendung können Sie Ihren Desktop nach Ihren eigenen "
 "Bedürfnissen anpassen :)."
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 54
-#: rc.cpp:84
-#, no-c-format
 msgid "Use enhanced Kickoff style menu"
-msgstr ""
+msgstr "Erweitertes Kickoff-Stilmenü verwenden"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 16
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 38
-#: rc.cpp:20 rc.cpp:26
-#, fuzzy, no-c-format
 msgid "Wallpaper"
-msgstr "Hintergrundbild :"
+msgstr "Hintergrundbild"
 
-#: ../src/kaptan.cpp:53
 msgid "Wallpaper Setup"
-msgstr "Hintergrundbildeinrichtung"
+msgstr "Hintergrundbildkonfiguration"
 
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 16
-#: rc.cpp:10 ../src/kaptan.cpp:41
-#, no-c-format
 msgid "Welcome"
 msgstr "Willkommen"
 
-#~ msgid ""
-#~ "<center>\n"
-#~ "You have finished!  Now you can start using Pardus Linux<br>\n"
-#~ "<a href=\"#tasma\">If you want to change more settings click here to "
-#~ "start <b>Pardus Configuration Center</b></a>\n"
-#~ "</center>"
-#~ msgstr ""
-#~ "<center>\n"
-#~ "Sie sind mit dieser Anwendung fertig!  Jetzt können Sie mit Pardus Linux "
-#~ "arbeiten<br>\n"
-#~ "<a href=\"#tasma\">Wenn Sie weitere Änderungen vornehmen möchten, klicken "
-#~ "Sie bitte hier, um auf das<b>Pardus Konfigurationszentrum</b> zu "
-#~ "gelangen</a>\n"
-#~ "</center>"
-
-#~ msgid "Preview :"
-#~ msgstr "Vorschau :"
-
-#~ msgid ""
-#~ "_: EMAIL OF TRANSLATORS\n"
-#~ "Your emails"
-#~ msgstr ""
-#~ "_:EMAIL VON DEN ÜBERSETZERN\n"
-#~ "oelcerman@fussballkreis.org\n"
-#~ "aytekguelen@yahoo.de"
-
-#~ msgid ""
-#~ "_: NAME OF TRANSLATORS\n"
-#~ "Your names"
-#~ msgstr ""
-#~ "_:NAMEN VON DEN ÜBERSETZERN\n"
-#~ "Mustafa Muhammed Ölcerman\n"
-#~ "Aytekin Gülen"
