--- a/trunk/tasma/network-manager/po/de.po
+++ b/trunk/tasma/network-manager/po/de.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-11 16:39+0200\n"
-"PO-Revision-Date: 2006-12-05 23:29+0200\n"
+"PO-Revision-Date: 2006-12-11 21:10+0200\n"
 "Last-Translator: Mustafa M. Ölcerman <oelcerman@fussballkreis.org>\n"
-"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-"
-"translation-de>\n"
+"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -33,20 +32,14 @@ msgstr "Adresse:"
 msgid "Automatic"
 msgstr "Automatisch"
 
-#: browser.py:90
-#, fuzzy
 msgid "Turn on/off connection"
-msgstr "Neue Verbindung"
+msgstr "Verbindung de-/aktvieren"
 
-#: browser.py:103
-#, fuzzy
 msgid "Configure connection"
-msgstr "Netzwerkverbindungen konfigurieren"
+msgstr "Verbindung konfigurieren"
 
-#: browser.py:106
-#, fuzzy
 msgid "Delete connection"
-msgstr "Verbindung löschen?"
+msgstr "Verbindung löschen"
 
 #: browser.py:124
 #, python-format
@@ -63,43 +56,30 @@ msgstr ""
 msgid "Delete connection?"
 msgstr "Verbindung löschen?"
 
-#: browser.py:205
 msgid "No device!"
-msgstr ""
+msgstr "Kein Gerät!"
 
-#: browser.py:381
-#, fuzzy
 msgid "New connection"
 msgstr "Neue Verbindung"
 
-#: browser.py:386 nameconf.py:28
-#, fuzzy
 msgid "Name Service Settings"
-msgstr "Netzwerk Einstellungen"
+msgstr "Name Service Einstellungen"
 
-#: browser.py:420
-#, fuzzy
 msgid "Network Connections Help"
-msgstr "Netzwerkverbindungen"
+msgstr "Netzwerkverbindungen Hilfe"
 
-#: connection.py:34
-#, fuzzy
 msgid "Connection name:"
-msgstr "Hostname:"
+msgstr "Name der Verbindung:"
 
-#: connection.py:41
-#, fuzzy
 msgid "Connection"
-msgstr "Neue Verbindung"
+msgstr "Verbindung"
 
 #: connection.py:47
 msgid "Device:"
 msgstr "Gerät:"
 
-#: connection.py:52
-#, fuzzy
 msgid "Select"
-msgstr "Kein Gerät"
+msgstr "Auswählen"
 
 #: connection.py:66
 msgid "Scan"
@@ -117,10 +97,8 @@ msgstr "Keine Authentifikation"
 msgid "Password:"
 msgstr "Passwort:"
 
-#: connection.py:116
-#, fuzzy
 msgid "User name:"
-msgstr "Hostname:"
+msgstr "Benutzername:"
 
 #: connection.py:146
 msgid "Scan results:"
@@ -134,10 +112,8 @@ msgstr "Erneut suchen"
 msgid "Use"
 msgstr "Verwenden"
 
-#: connection.py:195
-#, fuzzy
 msgid "Network settings"
-msgstr "Netzwerk Einstellungen"
+msgstr "Netzwerkeinstellungen"
 
 #: connection.py:205
 msgid "Automatic query (DHCP)"
@@ -167,29 +143,22 @@ msgstr "Name-Server"
 msgid "Configure network connection"
 msgstr "Netzwerkverbindungen konfigurieren"
 
-#: network-manager.py:33 network-manager.py:85
-#, fuzzy
 msgid "Network Manager"
-msgstr "Netzwerk Einstellungen"
+msgstr "Netzwerk-Manager"
 
-#: network-manager.py:80
-#, fuzzy
 msgid "Network manager module is already started!"
-msgstr "Netzwerk KGA wird bereits ausgeführt!"
+msgstr "Netzwerk-Manager Modul wurde bereits gestartet!"
 
-#: comariface.py:162
 msgid "Waiting COMAR..."
-msgstr ""
+msgstr "Wartend auf COMAR..."
 
-#: comariface.py:163
 msgid "Connection to the COMAR unexpectedly closed, trying to reconnect..."
-msgstr ""
+msgstr "Verbindung zu COMAR wurde unerwartet geschlossen, wird versucht, erneut zu verbinden"
 
-#: comariface.py:182 comariface.py:199
 msgid ""
 "Cannot connect to the COMAR! If it is not running you should start it with "
 "the 'service comar start' command in a root console."
-msgstr ""
+msgstr "Kann nicht mit COMAR verbinden! Wenn es nicht gestartet worden ist, dann sollten Sie es mit dem Kommando 'service comar start' in einer Root-Konsole starten."
 
 #: comariface.py:365
 msgid "new connection"
@@ -211,15 +180,11 @@ msgstr "Name-Server hinzufügen"
 msgid "Name server:"
 msgstr "Name-Server:"
 
-#: newconn.py:26
-#, fuzzy
 msgid "Create a new connection"
-msgstr "Verindung erstellen"
+msgstr "Eine neue Verindung erstellen"
 
-#: newconn.py:31
-#, fuzzy
 msgid "Select device:"
-msgstr "Kein Gerät"
+msgstr "Gerät auswählen:"
 
 #: newconn.py:57
 msgid "Create"
@@ -235,34 +200,26 @@ msgstr "Netzwerk-Pakete installieren!"
 
 #: newconn.py:110
 msgid "No package with COMAR network scripts are installed yet."
-msgstr ""
-"Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
+msgstr "Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
 
 #: network-applet.py:234
 msgid "Firewall..."
-msgstr ""
+msgstr "Firewall..."
 
-#: network-applet.py:235
-#, fuzzy
 msgid "Edit Connections..."
-msgstr "Verbindung löschen?"
+msgstr "Verbindungen bearbeiten..."
 
 #: network-applet.py:237
 msgid "Icon Per Device"
-msgstr ""
+msgstr "Icon je Gerät"
 
 #: network-applet.py:238
 msgid "Single Icon"
-msgstr ""
+msgstr "Einzelnes Icon"
 
-#: network-applet.py:282
 msgid "Should network-applet start automatically when you login?"
-msgstr ""
+msgstr "Soll der Netzwerk Applet automatisch bei der Anmeldung gestartet werden?"
 
-#: network-applet.py:413
-#, fuzzy
 msgid "Network Applet"
-msgstr "Netzwerk Einstellungen"
+msgstr "Netzwerk Applet"
 
-#~ msgid "From query"
-#~ msgstr "Von Anfrage"
